[HBD] Intercept Flash navigations in popup windows.

This CL turns up the Flash download interception aggression - by making
it apply to popup windows as well.

This should be fairly harmless.

BUG=676096

Review-Url: https://codereview.chromium.org/2590363003
Cr-Commit-Position: refs/heads/master@{#440518}

Former-commit-id: d60fef6f171bacc82ecaf3f1d4b70450d49ad1cc